--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>Welcome to Snowpack!</h1>
+    <div id="root"></div>
     <script type="module" src="/index.js"></script>
   </body>
 </html>
